--- a/carcassonne-server/.env
+++ b/carcassonne-server/.env
@@ -1,2 +1,13 @@
+# Server configuration
 PORT=8080
-JWT_SECRET=mysecretkey
+NODE_ENV=development
+
+# Database configuration
+DB_HOST=localhost
+DB_PORT=5432
+DB_USER=carcassonne
+DB_PASSWORD=carcassonne
+DB_NAME=carcassonne
+
+# JWT configuration
+JWT_SECRET=your_jwt_secret_key_here
