--- a/carcassonne-server/package.json
+++ b/carcassonne-server/package.json
@@ -7,10 +7,16 @@
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.2",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "knex": "^3.1.0",
+    "pg": "^8.14.1"
   },
   "devDependencies": {
     "dotenv": "^16.4.7",
     "nodemon": "^3.1.9"
+  },
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   }
 }
